# bitrust

./: .gitignore  Cargo.toml  Readme.md  git2.go  go.mod  go.sum  index.html  log.json  update.sh
src/: main.rs
