[package]

name = "bitrust"
version = "0.0.1"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/bitrust"
license = "MIT"
readme = "README.md"
description = "List commits with breaking changes from the rust repository."

[dependencies]
rustc-serialize = "0.3.0"
git2 = "0.2.1"
