[package]

name = "bitrust"
version = "1.0.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/bitrust"
license = "MIT"
readme = "README.md"
description = "List commits with breaking changes from the rust repository."

[profile.release]
opt-level = 3
debug = false
lto = true

[dependencies]
rustc-serialize = "0.3.7"
git2 = "0.2.6"
