[package]

name = "bitrust"
version = "1.0.1"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/bitrust"
license = "MIT"
readme = "README.md"
description = "List commits with breaking changes from the rust repository."

[profile.release]
opt-level = 3
debug = false
lto = true

[dependencies]
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
